--- a/credits.html
+++ b/credits.html
@@ -17,6 +17,8 @@
 		<link rel="icon" href="ast/icon.png">
 		
 		<script src="sct/ft.js" defer></script>
+		
+		<style>#footer{position:relative;bottom:-708}</style>
 		</head>
 		
 		<body>
@@ -24,7 +26,7 @@
 			<div id='barl'></div>
 			<div id='middle'>
 				<div id='title'><header><h1 style="font-family:Typori">credits</h1></header></div>
-					<br><a class='tab'>KDaui: General help and knowledge.								    		     [<a class="link" href="https://kdaui.github.io/">Website</a>]</a>
+					<br><a class='tab'>Kdaui: General help and knowledge.								    		     [<a class="link" href="https://kdaui.github.io/">Website</a>]</a>
 					<br><a class='tab'>TinnedFoil906: Background image.									    	     [<a class="link" href="https://sites.google.com/view/tinnedfoil906/">Website</a>]</a>
 					<br><br><a class='tab'>Stack Overflow community:<br>having the solutions for every problem known to man.				   [<a class="link" href="https://stackoverflow.com/questions">stackoverflow.com</a>]</a>
 					<br><h3 style="width:110" class="subhead">Fonts</h3>
