--- a/comp.html
+++ b/comp.html
@@ -27,13 +27,13 @@
 				<div id='title'><header><h1 style="font-family:Typori">Compositions</h1></header></div>
 					<div id='axe'>
 						<br><h3 style="width:110" class="subhead">Digital</h3>
-							<div style='font-family:metro' id='comp1'><br>Jmx9</div>
+							<div hidden><div  'font-family:metro' id='comp1'><br>Jmx9</div>
 								<audio style='width:750' controls src="ast/mus/finalcomp.mp3"></audio>
 								<br>Made this for coursework. Not the best. [MX9]
 								<div><br><br></div>
 							<div  style='font-family:metro' id='comp2'>Bitubular Hall</div>
 								<audio style='width:750' controls src="ast/mus/bitbo.mp3"></audio>
-								<br>[MX9]
+								<br>[MX9]</div>
 						<br><h3 style="width:110" class="subhead">Live</h3>
 					</div>
 			</div>
