--- a/college.html
+++ b/college.html
@@ -26,12 +26,13 @@
 				<div id='middle'>
 				<div id='title'><header><h1 style="font-family:Typori">College</h1></header></div>
 					<div id='axe'>
-						<br><a class='link' href=''>Synthesis & Sampling - "Learn from the Pros" Assignment</a>
-						<br><br><a class='link' href=''>Remix Assignment</a>
+						<br><br><a class='link' href='college1.html'>Remix Assignment</a>
+						<br><a class='link' href='college2.html'>Synthesis & Sampling - "Learn from the Pros" Assignment</a>
 					</div>
 			</div>
 			<div id='barr'></div>
 		</div>
 		</body>
 		<div id='footer'></div>
+
 </html>
