--- a/college2.html
+++ b/college2.html
@@ -134,13 +134,13 @@
 
 	<br><br><br><br><h2>Sampling</h2>
 	<br><br><br><br><h3>1. Fundamentals</h3>
-	<p>In essence, sampling is taking a section of audio from one place and using it in another. This is perhaps most commonly done with drum breaks, in genres such as hip-hop.</p>
+	<p>In essence, sampling is taking a section of audio from one place and using it in another. This is perhaps most commonly done with drum breaks, in genres such as hip-hop. Another common use is vocal sampling. Sampling is a useful technique because it can lighten the creative load on the musician and/or provide things for the song that the musician is unable to create themselves.</p>
 
 	<br><br><br><br><br><br><h3>2. Ableton Samplers</h3>
 		<h3>Simpler</h3>
 	<p>Accepts a single sample.</p>
 	<br><br><b style='font-size:20;'>Mode:</b><br>
-	<p>The sound generating source for the synth. This emulates the VCOs typically found on analogue subtractive synthesizers.</p>
+	<p>Changes the manner in which the sample is played back when the key is pressed.</p>
 	<div style='border-left:4px solid white;padding-left:20px;'>
 	<li>Classic: when the key is being held down, the sample will play. When the key is released, the sound will stop.</li><br>
 	<li>1-Shot: when the key is pressed the sample will play from start to finish even if the key is released.</li><br>
