--- a/college2.html
+++ b/college2.html
@@ -1,5 +1,5 @@
 <html>
-<head><style>html{background-color:#443333;color:white;font-family:Bahnschrift;font-size:17;}h1{font-size:32}h3{font-size:30}#cent{display:flex;flex-direction:column;justify-content:center;width:500%;}</style></head>
+<head><style>html{background-color:#443333;color:white;font-family:Bahnschrift;font-size:17;}h1{font-size:32}h3{font-size:30}#cent{display:flex;flex-direction:column;justify-content:center;width:500%;}</style><link rel="icon" href="ast/icon.png"></head>
 <body>
 <div style='display:flex;justify-content:center;'>
 <div style='flex:1;'></div>
@@ -13,11 +13,11 @@
         	<b style='font-size:20;'>Wave Shapes:</b><br>
 	<p>The greatest difference between oscillators is their wave shape. The smoothness of the wave determines the harshness of the sound produced</p>
 
-	<div style='border-left:4px solid white;padding-left:20px;'><div style='display:flex;'><div style='flex:2;'><li> Sine - The smoothest wave shape; produces a soft, round tone.</li> <audio style='width:150' controls src="snd/tone_sine.mp3"></audio></div><div style='flex:1;'><img width=400 src='ast/sin.png'></div></div>
-	<div style='display:flex;'><div style='flex:2;'><li>Saw/Sawtooth - Produces a harsh, buzzy sound most often used in lead synths.</li> <audio style='width:150' controls src="snd/tone_saw.mp3"></audio></div><div style='flex:1;'><img width=400 src='ast/saw.png'></div></div>
-	<div style='display:flex;'><div style='flex:2;'><li>Square - Creates a piercing noise used in both lead and bass synths.</li> <audio style='width:150' controls src="snd/tone_square.mp3"></audio></div><div style='flex:1;'><img width=400 src='ast/sqr.png'></div></div>
-	<div style='display:flex;'><div style='flex:2;'><li>Triangle - Produces a tone somewhere between that of a sine wave and a saw wave.</li> <audio style='width:150' controls src="snd/tone_tri.mp3"></audio></div><div style='flex:1;'><img width=400 src='ast/tri.png'></div></div>
-	<div style='display:flex;'><div style='flex:2;'><li>Noise - Mainly used as ambience; creates a chaotic wave shape that produces static.</li> <audio style='width:150' controls src="snd/noise.mp3"></audio></div><div style='flex:1;'><img width=400 src='ast/noise.png'></div></div></div>
+	<div style='border-left:4px solid white;padding-left:20px;'><div style='display:flex;'><div style='flex:2;'><li> Sine - The smoothest wave shape; produces a soft, round tone.</li> <audio style='width:150' controls src="snd/tone_sine.mp3"></audio></div><div style='flex:1;margin-left:4vw'><img width=350 src='ast/sin.png'></div></div>
+	<div style='display:flex;'><div style='flex:2;'><li>Saw/Sawtooth - Produces a harsh, buzzy sound most often used in lead synths.</li> <audio style='width:150' controls src="snd/tone_saw.mp3"></audio></div><div style='flex:1;margin-left:4vw'><img width=350 src='ast/saw.png'></div></div>
+	<div style='display:flex;'><div style='flex:2;'><li>Square - Creates a piercing noise used in both lead and bass synths.</li> <audio style='width:150' controls src="snd/tone_square.mp3"></audio></div><div style='flex:1;margin-left:4vw'><img width=350 src='ast/sqr.png'></div></div>
+	<div style='display:flex;'><div style='flex:2;'><li>Triangle - Produces a tone somewhere between that of a sine wave and a saw wave.</li> <audio style='width:150' controls src="snd/tone_tri.mp3"></audio></div><div style='flex:1;margin-left:4vw'><img width=350 src='ast/tri.png'></div></div>
+	<div style='display:flex;'><div style='flex:2;'><li>Noise - Mainly used as ambience; creates a chaotic wave shape that produces static.</li> <audio style='width:150' controls src="snd/noise.mp3"></audio></div><div style='flex:1;margin-left:4vw'><img width=350 src='ast/noise.png'></div></div></div>
 
 	<br><b style='font-size:26;'>Low Frequency Oscillators, LFO:</b><br>
 	<p>Produce a constant, unheard tone (below human range of hearing) that can be used to modulate certain parameters. The benefit of using an LFO over an envelope is that an LFO is infinitely repeating whist it has a frequency greater than 0.</p>
@@ -58,7 +58,7 @@
 	<p>Analog has two filters which can be applied in series or in parallel and can have different filter types. The Fil1 and Fil2 switches can be used to enable and disable either filter at will.</p>
 	<div style='border-left:4px solid white;padding-left:20px;'>
 	<div style='display:flex;'><div style='flex:4;'><li>Freq: sets the cutoff frequency.</li><br>
-	<li>Type: different filter types have slightly different shapes and can be used to add drive.</li></div><div style='flex:1;'><img width=200 src='ast/analog_filter.png'></div></div></div>
+	<li>Type: different filter types have slightly different shapes and can be used to add drive.</li></div><div style='flex:1;margin-left:2vw'><img width=200 src='ast/analog_filter.png'></div></div></div>
 
 	<br><br><b style='font-size:20;'>Envelope:</b><br>
 	<p>Analog has a basic ADSR (attack, decay, sustain, release) envelope design as discussed above, however it has seperate envelopes for each of its two filters.</p>
@@ -138,14 +138,14 @@
 
 	<br><br><br><br><br><br><h3>2. Ableton Samplers</h3>
 		<h3>Simpler</h3>
-	<p>Accepts a single sample.</p>
+	<p>Accepts a single sample and pitches it depending on the key pressed..</p>
 	<br><br><b style='font-size:20;'>Mode:</b><br>
 	<p>Changes the manner in which the sample is played back when the key is pressed.</p>
 	<div style='border-left:4px solid white;padding-left:20px;'>
 	<li>Classic: when the key is being held down, the sample will play. When the key is released, the sound will stop.</li><br>
 	<li>1-Shot: when the key is pressed the sample will play from start to finish even if the key is released.</li><br>
-	<div style='display:flex;'><div style='flex:2;'><li>Slice: divides the sample into short sections which are each mapped to an individual key. Playing a note on the keyboard will play the corresponding slice.</div><div style='flex:1;'><img width=400 src='ast/sin.png'></div></div>
-	<p>The audio can be sliced by: transient; the beat, best used when the audio is already aligned to the BPM of the project; region, dividing the audio into even slices; or manual, allowing the user to cut up the audio in specific places which is useful for obtaining short drum samples.</p></div>
+	<div style='display:flex;'><div style='flex:2;'><li>Slice: divides the sample into short sections which are each mapped to an individual key. Playing a note on the keyboard will play the corresponding slice.</div><div style='flex:1;margin-left:2vw'><img width=300 src='ast/simpler_modes.png'></div></div>
+	<div style='display:flex;'><div style='flex:2;'><p>The audio can be sliced by: transient; the beat, best used when the audio is already aligned to the BPM of the project; region, dividing the audio into even slices; or manual, allowing the user to cut up the audio in specific places which is useful for obtaining short drum samples.</p></div><div style='flex:1;margin-left:2vw'><img width=100 src='ast/simpler_slice.png'></div></div></div>
 
 	<br><br><br><br><h2>Digital Audio Considerations</h2>
 	<br><br><br><br><h3>1. Sample Rate</h3>
@@ -154,9 +154,13 @@
 	The Nyquist-Shannon sampling theorem states that to produce an accurate recreation of a signal, the sampling rate must be at least double the frequency of the signal at its greatest point. The standard minimum sampling rate for audio is 44.1 kHz.
 
 	<br><br><br><br><h3>2. Bit Depth</h3>
-
+	<p>Bit depth is the accuracy to which a continuous analogue signal from an electric current is rounded, in order to be stored as a digital signal. A higher bit depth will be more accurate but will require more storage for the extra data.</p>
+	
 	<br><br><br><br><h3>3. Bit Rate</h3>
-
+	<p>Bit rate is equal to the bit depth multiplied by the sample rate, measured in bps or more commonly kpbs. It provides a quick estimate of audio quality as one combinbed value.
+	<br>For CDs, the standard is a bit depth of 16 and a sample rate of 44.1kHz. This produces a bit rate of 705.6kbps per stereo channel, of which there are generally two, giving a final value of 1,411kpbs. This provides a high level of fidelity
+	that well utilises the storage provided by such a physical medium; streaming services such as Spotify or YouTube have far lower bit rates. This is done to reduce the amount of data needing to be transferred when audio is requested, 
+	cutting down on the time and money needed to stream it and store it. If you are creating a piece of music it may be a good idea to export multiple versions of your piece with different bit rates for these different purposes.</p>
 </div><div style='flex:1;'></div></div>
 </body>
 </html>
