--- a/college2.html
+++ b/college2.html
@@ -48,6 +48,7 @@
 	<div><br><br><br><br><br><br><h3>2. Ableton Synthesisers</h3>
 		<h3>Analog</h3>
 	<p>Synthesis Type | Subtractive:<br> A type of synthesis that starts with an VCO (oscillator), and then gradually ‘subtracts’ elements from the sound through components like Filters, Amp envelopes, and modulation. Subtractive synthsis is useful to create sounds that are simple and easy to adjust, without the complexity of other synthesis types.</p>
+	</i>Detuning can create nostalgic sounds often associated with subtractive synthesis:</i><br><audio style='width:200' controls src="snd/peaksound.mp3"></audio>
 	<br><br><b style='font-size:20;'>Oscillator:</b><br>
 	<p>The sound generating source for the synth. This emulates the VCOs typically found on analogue subtractive synthesizers.</p>
 	<div style='border-left:4px solid white;padding-left:20px;'>
