--- a/college1.html
+++ b/college1.html
@@ -80,12 +80,12 @@
 			</div>
 			
 			<!-- Axel F -->
-			<div class='cent'><h2>Axel F</h2></div>
+			<div class='cent'><h2>Take Me Out</h2></div>
 			<div class='cont' id='sect2'>
 			
 				<div class='intracont left' id='origin2'>
 					<div class='cent'><h3>Original</h3></div>
-					<li>Made by: Harold Faltermeyer</li>
+					<li>Made by: Franz Ferdinand</li>
 					<li>BPM:</li>
 					<li>Length:</li>
 					<li>Instrumentation:</li>
@@ -94,12 +94,12 @@
 					<div class='cent'><h4>About Genre</h4></div>
 					<p></p>
 					
-					<div class='cent'><img width=100 src='ast/placeholder.png'></div>
+					<div class='cent'><iframe width="560" height="315" src="https://www.youtube.com/embed/h_JR9kIw38U?si=ZD66_7THt-2YkkM8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 				</div>
 				
 				<div class='intracont right' id='remix2'>
 					<div class='cent'><h3>Remix</h3></div>
-					<li>Made by: Maromaro</li>
+					<li>Made by: Naum Gabo</li>
 					<li>BPM:</li>
 					<li>Length:</li>
 					<li>Instrumentation:</li>
@@ -114,4 +114,5 @@
 			
 		</div>
 	</body>
+
 </html>
