my understanding of list elements has been shattered

--- a/college1.html
+++ b/college1.html
@@ -34,7 +34,7 @@
 				<div class='intracont right' id='remix0'>
 					<div class='cent'><h3>Remix</h3></div>
 					<li>Made by: The Glitch Mob</li>
-					<li>BPM: 120 (-4 from original)/li>
+					<li>BPM: 120 (-4 from original)</li>
 					<li>Length: 4:17 (+0:15 from original)</li>
 					<li>Instrumentation: Synth bass, drumkit<br><br></li>
 					<li>Key: E Minor</li>
