--- a/college1.html
+++ b/college1.html
@@ -27,7 +27,7 @@
 					<li>Genre: Garage Rock</li>
 					<div class='cent'><h4>About Genre</h4></div>
 					<p>Characterised by basic chords and simple lyrics, often associated with small bands formed in the suburbs who would rehearse in a band member's garage. Although many bands were picked up by large record companies, the term "garage rock" was retroactively used to describe these bands due to their similar sound.</p>
-					<p>The song has a very simplistic "heartbeat" drum with a kick on every beat and a snare on the off-beats that persists through the whole piece, save for select solo sections. This simplicity, along with the memorable but easy bassline, make this song a good fit for "garage rock".</p>
+					<p>The song has a very simplistic "heartbeat" drum with a kick on every beat and a snare on the off-beats that persists through the whole piece, save for select solo sections. This simplicity, along with the memorable but easy bassline, makes this song a good fit for "garage rock".</p>
 					<div class='cent'><iframe width="560" height="315" src="https://www.youtube.com/embed/RDuzszjrdcc?si=Ar20Mj_grZ95kfoy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 				</div>
 				
@@ -41,8 +41,7 @@
 					<li>Genre: Dubstep</li>
 					<div class='cent'><h4>About Genre</h4></div>
 					<p>One characteristic of dubstep is prominent basslines and rhythm. The tempo is usually within 132-142 beats per minute.</p>
-					<p>In this remix, the original guitar has been replaced with a synthesised bass with heavy distortion and glitching effects; the drums have been raised in the mix and made more powerful, however this is most likely done with effects applied to the original stem rather than a synthesised kit.
-						Interestingly, the tempo is lowered from 124 to 120BPM, rather than raised as would be typical of a dubtep piece.<br><br></p>
+					<p>In this remix, the original guitar has been replaced with a synthesised bass with heavy distortion and glitching effects; the drums have been raised in the mix and made more powerful, however this is most likely done with effects applied to the original stem rather than a synthesised kit. Interestingly, the tempo is lowered from 124 to 120BPM, rather than raised as would be typical of a dubtep piece.<br><br></p>
 					<div class='cent'><iframe width="560" height="315" src="https://www.youtube.com/embed/f0SrZh32GcQ?si=ikkyUgnJHl4RvO8n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 				</div>
 			</div>
