--- a/college.html
+++ b/college.html
@@ -26,8 +26,9 @@
 				<div id='middle'>
 				<div id='title'><header><h1 style="font-family:Typori">College</h1></header></div>
 					<div id='axe'>
-						<br><br><a class='link' href='college1.html'>Remix Assignment</a>
-						<br><a class='link' href='college2.html'>Synthesis & Sampling - "Learn from the Pros" Assignment</a>
+						<br><br><a class='link' href='college1.html'>Remix Assignment</a><br>
+						<br><a class='link' href='college2.html'>Synthesis & Sampling - "Learn from the Pros" Assignment</a><br>
+						<br><a class='link' href='college3.html'>Sample Pack</a><br>
 					</div>
 			</div>
 			<div id='barr'></div>
