--- a/log.html
+++ b/log.html
@@ -1,3 +1,4 @@
+<!-- <!DOCTYPE html> -->
 <html lang="en">
 	<head>
 		<meta property="og:image" content="" />
@@ -24,17 +25,19 @@
 		<div id="containerdiv">
 			<div id='barl'></div>
 				<div id='middle'>
-				<div id='title'><header><h1 style="font-family:Typori">Compositions</h1></header></div>
+				<div id='title'><header><h1 style="font-family:Typori">Updates</h1></header></div>
 					<div id='axe'>
-						<br><h3 style="width:110" class="subhead">Digital</h3>
-							<div><div  'font-family:metro' id='comp1'><br>Jmx9</div>
-								<audio style='width:750' controls src="ast/mus/finalcomp.mp3"></audio>
-								<br>Made this for coursework. Not the best. [MX9]
-								<div><br><br></div>
-							<div  style='font-family:metro' id='comp2'>Bitubular Hall</div>
-								<audio style='width:750' controls src="ast/mus/bitbo.mp3"></audio>
-								<br>[MX9]</div>
-						<br><h3 style="width:110" class="subhead">Live</h3>
+						<br><h3 hidden style="width:110" class="subhead">next</h3>
+						
+						<br><h3 class="subhead">3.2 07/02/26</h3>
+						<li>Changed quotes in /sct/quotereel.js,</li>
+						<li>Updated infobox on index.html</li>
+						<li>Fixed weird formatting in styles.css,</li>
+						<li>Locked quotereel at 110px so it doesn't move the body text,</li>
+						<li>Made footer somewhat opaque,</li>
+						<li>Added a spacer beneath the body text so that the bottom doesn't get obscured by the footer being opaque,</li>
+						<li>Updated my Steam stats on homepage and added links to all games plus SteamDB,</li>
+						<li>Corrected /sct/ft.js.</i>
 					</div>
 			</div>
 			<div id='barr'></div>
