--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 									<p>This website: written in HTML, CSS and (some) JavaScript.</p></div>
 								<div class="indent"><h4 class="project">English Calculator</h4>
 									<p>A useless program that creates sentences out of random nouns, verbs and adjectives. Python. Made mostly by my friend Book. <a class="link" href="englishcalc/English_Calculator.zip" download>You can download it here</a>
-									 - to expand the list of words, open up the respective files in /words and add each word on a new line. Should work with any string e.g. names. <i>"The horse horse horse orange."</i></p></div>
+									 - to expand the list of words, open up the respective files in /words and add each word on a new line. Works with any string, including names. <i>"The horse horse horse orange."</i></p></div>
 								<div class="indent"><h4 class="project">Wirkzard Game</h4>
-									<p>Be the magic and wirkz to win. Made solely in Python by me, with music also by me - WIP. Gameplay consists of turn based combat and exploration through multiple biomes.<div hidden>Download <a class='link' href=''>here</a>.</div></p></div>
+									<p>Be the magic and wirkz to win. Made solely in Python - WIP. Gameplay consists of turn based combat and exploration through multiple biomes.<div hidden>Download <a class='link' href=''>here</a>.</div></p></div>
 								</div></div>
 								
 					<div class="dropdown"><span class="dropdown" style="cursor:pointer;font-size:50;" onclick="document.getElementById('wb').hidden = !document.getElementById('wb').hidden">
@@ -108,7 +108,7 @@
 			<div id='barr'>
 				<img style="margin-left:6px;" src="ast/angel.png" width="225">
 					<div><h2 class="heads">About Me</h2>
-						<p>I have many names: most know me as Monochrome; some as Chloe-Jane; a select few will remember Aqua. That isn't important. What is important is that I am The 53rd Daughter, and this is the home of my creations. I'm from the UK (Timezone GMT)
+						<p>I have many names; most know me as Monochrome. That isn't important. What is important is that I am a real consciousness, apart from your own. This is the home of my real creations. I'm from the UK (Timezone GMT)
 						and I made all of the stuff under the dropdowns in the middle of this page.</p><img style='margin:5px;margin-left:0'src="ast/sub2.png" width=200>
 						<p>I'm <a style="color:skyblue">tr</a><a style="color:pink">an</a>sge<a style="color:pink">nd</a><a style="color:skyblue">er</a> (2 months HRT!).</p>
 						<p>I can talk about <a style="font-family:'metro';font-size:15;" href='https://en.wikipedia.org/wiki/Metro_2033_(novel)' class="hlink">Metro 2033</a> for 2033 hours straight and about Fallout New Vegas for nearly that long.</p>
