--- a/college3.html
+++ b/college3.html
@@ -1,7 +1,26 @@
 <html>
 <head>
+	<meta property="og:image" content="" />
+	<meta property="og:image:width" content="1053" />
+	<meta property="og:image:height" content="984" />
+	<meta property="og:site_name" content="SECTOR <9834>" />
+	<meta property="og:type" content="object" />
+	<meta property="og:title" content="chloechrome college work" />
+	<meta property="og:url" content="https://chloechrome.github.io" />
+	<meta property="og:description" content="My music coursework" />
+		
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+		
+	<link rel="stylesheet" href="basic.css">
+	<link rel="stylesheet" href="styles.css">
+	<style>#axe{justify-content:center;margin-left: 21%}</style>
+		
+	<link rel="icon" href="ast/icon.png">
+		
+	<script src="sct/ft.js" defer></script>
+		
 	<style>
-	html{background-color:#333333;color:white;font-family:georgia;}
+	html{font-size:17;background-image:url('ast/backdrop31.png')}
 	body{display:flex;flex-direction:column;justify-content:center;}
 	.titlebar{font-size:24;}
 	.subtt{font-size:20;}
@@ -9,8 +28,11 @@
 	.t
 	</style>
 </head>
+<!-- holy scuffed batman!
+it's tradition for these pages to be rushed now
+2 inline style tags O-o -->
 <body>
-	<div class='titlebar'>Producer Pack</div>
+	<div class='titlebar'><u>Producer Pack</u></div>
 	<main style='margin-left:10%;margin-top:2%;'>
 	<div class='post' id='samples'>
 		
@@ -19,18 +41,47 @@
 			<div class='par'>Sources:
 			<li>Åreknuteknyterne - You Could Be War (toms, kick, cymbals)</li>
 			<li>Blackadder Goes Forth (snare, gunshot)</li>
+			<p>To create this rack I simply took the intro fill from You Could Be War and manually sliced it into the different drums using Simpler.
+			I then exported to a new drum rack. For the snare drum I took a clip from an episode of Blackadder Goes Forth, in which Blackadder
+			shoots a pigeon; I cropped it to only include the gunshot and then transposed the result upwards and further cropped it to make the noise
+			more abrupt, so that it sounds more like striking a drum than firing a reverberating shot. Finally I increased the gain for a more powerful
+            tone. For extra depth I also opted to include the gunshot in full, at its original pitch, as a separate sound.</p>
+			<img width=500 src='ast/col3/rackk1.png'>
+			<img width=500 src='ast/col3/rackk2.png'><br>
+			<style>.scuff{display:flex;align-content:center;flex-direction:column}</style>
+			<div class='scuff'><div>Drums sample:</div><br><div><audio controls style='width:50' src='snd/_yecch.mp3'></div></div><br>
+			<div class='scuff'><div>Pistol sample:</div><br><div><audio controls style='width:50' src='snd/_black.mp3'></div></div><br>
+			
+			<div class='scuff'><div>Preview:</div><div><audio controls style='width:256' src='snd/tone_sine.mp3'></div></div>
 			</div>
 		</div>
 		<div class='sect' id='2'>
 			<div class='subtt'>Wav Piano</div>
 			<div class='par'>Sources:
-			<li>[own sample]</li>
+			<li>Own sample from a public train station piano.</li>
+			<p>For this sound I recorded a single piano keypress using my phone, in .wav format. I imported this sound file first into
+			Audacity in order to crop it down and apply a slight reverb, before I imported that into Ableton and placed it in Simpler to use as
+			a sampler instrument. The result is a fairly convincing piano sound, however to improve it I would take more samples and place all of 
+			them in Sampler to add an element of random variation. The sound cuts off quite abruptly which is not ideal, but unnoticeable most of
+			the time.</p>
+			<div class='scuff'><div>Sample:</div><br><div><audio controls style='width:50' src='snd/_wav.wav'></div></div><br>
+			
+			<div class='scuff'><div>Preview:</div><div><audio controls style='width:256' src='snd/tone_sine.mp3'></div></div>
 			</div>
 		</div>
 		<div class='sect' id='3'>
 			<div class='subtt'>Ritual Bass</div>
 			<div class='par'>Sources:
 			<li>Åreknuteknyterne - Teenage Ritual</li>
+			<p>This bass was also easy to clip as, just like the drums, it plays in isolation at the beginning of its piece.
+			I sliced the sample into individual notes and chose two of these, of the same pitch, to place into Sampler. I configured Sampler such
+			that C#2 and above play only one sample, whilst C2 and below play both for added depth and a more powerful sound. Using a filter I 
+		    added some drive to the samples.</p>
+			
+			<img width=1000 src='ast/col3/ritb.png'>
+			<div class='scuff'><div>Sample:</div><br><div><audio controls style='width:50' src='snd/_rit.mp3'></div></div><br>
+			
+			<div class='scuff'><div>Preview:</div><div><audio controls style='width:256' src='snd/tone_sine.mp3'></div></div>
 			</div>
 		</div>
 		<div class='sect' id='4'>
