--- a/college3.html
+++ b/college3.html
@@ -34,10 +34,11 @@ it's tradition for these pages to be rushed now
 <body>
 	<div class='titlebar'><u>Producer Pack</u></div>
 	<main style='margin-left:10%;margin-top:2%;'>
-	<div class='post' id='samples'>
+	<div class='post' id='demo'><div class='sect'><div class='subtt'>Demo Track:</div><audio controls style='width:512' src='snd/demo.wav'></div></div>
+	<div class='post' id='samples'><div class='titlebar'><u><br>Sampler Instruments</u></div>
 		
 		<div class='sect' id='1'>
-			<div class='subtt'>Yecch Drums and the Blackadder's Pistol</div>
+			<div class='subtt'><br>Yecch Drums and the Blackadder's Pistol</div>
 			<div class='par'>Sources:
 			<li>Åreknuteknyterne - You Could Be War (toms, kick, cymbals)</li>
 			<li>Blackadder Goes Forth (snare, gunshot)</li>
@@ -52,7 +53,7 @@ it's tradition for these pages to be rushed now
 			<div class='scuff'><div>Drums sample:</div><br><div><audio controls style='width:50' src='snd/_yecch.mp3'></div></div><br>
 			<div class='scuff'><div>Pistol sample:</div><br><div><audio controls style='width:50' src='snd/_black.mp3'></div></div><br>
 			
-			<div class='scuff'><div>Preview:</div><div><audio controls style='width:256' src='snd/tone_sine.mp3'></div></div>
+			<div class='scuff'><div>Preview:</div><div><audio controls style='width:256' src='snd/_yecch2.mp3'></div></div>
 			</div>
 		</div>
 		<div class='sect' id='2'>
@@ -84,37 +85,67 @@ it's tradition for these pages to be rushed now
 			<div class='scuff'><div>Preview:</div><div><audio controls style='width:256' src='snd/tone_sine.mp3'></div></div>
 			</div>
 		</div>
+	</div>
+	<div class='post' id='synths'><div class='titlebar'><u><br>Synths<br></u></div>
 		<div class='sect' id='4'>
-			<div class='subtt'>Wav Bass, of no relation to the Wav Piano</div>
-			<div class='par'>Sources:
-			<li>[own sample]</li>
+			<div class='subtt'><br>Wav Bass, of no relation to the Wav Piano</div>
+			<div class='par'>
+			<p>Type: Wavetable<br>
+			   Synth: Wavetable<br>
+			   Role: Bass</p>
+			<p></p>
 			</div>
 		</div>
-	</div>
-	<div class='post' id='synths'>
 		<div class='sect' id='5'>
-			<div class='subtt'>Drift Asawdion</div>
-			<div class='par'>Parameters
-			<li></li>
+			<div class='subtt'><br>Dordogne</div>
+			<div class='par'>
+			<p>Type: Subtractive<br>
+			   Synth: Analog<br>
+			   Role: Lead/chorus</p>
+			<p></p>
 			</div>
 		</div>
 		<div class='sect' id='6'>
-			<div class='subtt'>Ghostlead</div>
-			<div class='par'>Parameters
-			<li></li>
-			</div>
+			<div class='subtt'><br>Drift Asawdion</div>
 			<div class='par'>
-			Sources:
-			<li>[own sample]</li>
+			<p>Type: Subtractive<br>
+			   Synth: Drift<br>
+			   Role: Lead/chorus/harmony</p>
+			<p></p>
 			</div>
 		</div>
 		<div class='sect' id='7'>
+			<div class='subtt'><br>Keighley</div>
+			<div class='par'>
+			<p>Type: Vector<br>
+			   Synth: Collision<br>
+			   Role: Harmony</p>
+			<p></p>
+			</div>
+		</div>
+		<div class='sect' id='8'>
+			<div class='subtt'>Ghostlead</div>
+			<div class='par'>
+			<p>Type: Granulative<br>
+			   Synth: Granulator 3<br>
+			   Role: Lead</p>
+			</div>
+		</div>
+		<div class='sect' id='9'>
 			<div class='subtt'>Screechlead</div>
-			<div class='par'>Parameters
-			</div><div class='par'>
-			Sources:
-			<li>[own sample]</li>
-			<li></li>
+			<div class='par'>
+			<p>Type: Granulative<br>
+			   Synth: Gruanulator 3<br>
+			   Role: Lead</p>
+			</div>
+		</div>
+		<div class='sect' id='A'>
+			<div class='subtt'>Spectre Piano</div>
+			<div class='par'>
+			<p>Type: Granulative<br>
+			   Synth: Granulator 3<br>
+			   Role: Harmony</p>
+			</div>
 			</div>
 		</div>
 	</div>
