--- a/college3.html
+++ b/college3.html
@@ -93,7 +93,7 @@ it's tradition for these pages to be rushed now
 			<p>Type: Wavetable<br>
 			   Synth: Wavetable<br>
 			   Role: Bass</p>
-			<p></p>
+			<p><img width=700 src='ast/col3/tsbl.png'><br><img width=700 src='ast/col3/tabl.png'></p>
 			</div>
 		</div>
 		<div class='sect' id='5'>
@@ -102,7 +102,7 @@ it's tradition for these pages to be rushed now
 			<p>Type: Subtractive<br>
 			   Synth: Analog<br>
 			   Role: Lead/chorus</p>
-			<p></p>
+			<p><img width=600 src='ast/col3/analog.png'></p>
 			</div>
 		</div>
 		<div class='sect' id='6'>
@@ -111,7 +111,7 @@ it's tradition for these pages to be rushed now
 			<p>Type: Subtractive<br>
 			   Synth: Drift<br>
 			   Role: Lead/chorus/harmony</p>
-			<p></p>
+			<p><img width=600 src='ast/col3/drs.png'></p>
 			</div>
 		</div>
 		<div class='sect' id='7'>
@@ -120,7 +120,10 @@ it's tradition for these pages to be rushed now
 			<p>Type: Vector<br>
 			   Synth: Collision<br>
 			   Role: Harmony</p>
-			<p></p>
+			<p>To create this synth I set resonator 1 to strings and resonator 2 to "beam". This makes a steel drum like sound that
+			reverberates for a long time; coupled with a long decay, this produces a pleasant melodic ringing.</p>
+			<p><img width=500 src='ast/col3/csn.png'>
+			<img width=500 src='ast/col3/csn2.png'></p>
 			</div>
 		</div>
 		<div class='sect' id='8'>
@@ -128,7 +131,14 @@ it's tradition for these pages to be rushed now
 			<div class='par'>
 			<p>Type: Granulative<br>
 			   Synth: Granulator 3<br>
-			   Role: Lead</p>
+			   Role: Lead<br>
+			   <p>In order to produce this sound, I set a small grain size which loops rapidly at higher pitches and slower at lower pitches,
+			   because I left warp off. This makes it rather unsuitable for playing chords but allows a greater range of different sounds to be
+			   produced with the instrument. A high shape value means the sound transitions smoothly between pitches and a low scan value makes
+			   the sound more consistent.</p>
+			   <p><img width=600 src='ast/col3/ghost.png'></p>
+			   <p>Sample:<br><audio controls style='width:50' src='snd/_ghost.mp3'>
+			   <div>Preview:</div><div><audio controls style='width:256' src='snd/tone_sine.mp3'></div></p>
 			</div>
 		</div>
 		<div class='sect' id='9'>
@@ -136,7 +146,11 @@ it's tradition for these pages to be rushed now
 			<div class='par'>
 			<p>Type: Granulative<br>
 			   Synth: Gruanulator 3<br>
-			   Role: Lead</p>
+			   Role: Lead<br></p>
+			   
+			<p><img hidden width=600 src='ast/col3/ghost.png'></p>
+			<p>Sample:<br><audio controls style='width:50' src='snd/scrh.wav'>
+			<div>Preview:</div><div><audio controls style='width:256' src='snd/tone_sine.mp3'></div></p>
 			</div>
 		</div>
 		<div class='sect' id='A'>
@@ -144,7 +158,8 @@ it's tradition for these pages to be rushed now
 			<div class='par'>
 			<p>Type: Granulative<br>
 			   Synth: Granulator 3<br>
-			   Role: Harmony</p>
+			   Role: Harmony<br>
+			   Sample:<div><audio controls style='width:50' src='snd/_spec.mp3'></div></p>
 			</div>
 			</div>
 		</div>
