--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 			<div id='barr'>
 				<img style="margin-left:6px;" src="ast/angel.png" width="225">
 					<div><h2 class="heads">About Me</h2>
-						<p>I have many names; most know me as Monochrome. That isn't important. What is important is that I am a real consciousness, apart from your own. This is the home of my real creations. I'm from the UK (Timezone GMT)
-						and I made all of the stuff under the dropdowns in the middle of this page.</p><img style='margin:5px;margin-left:0'src="ast/sub2.png" width=200>
+						<p>I have many names; that isn't important. Names give you subconscious notions about a person before you even meet them. What is important is that I am a real consciousness, apart from your own. This is the home of my real creations.
+						I'm from the UK (Timezone GMT) and I made all of the stuff under the dropdowns in the middle of this page.</p><img style='margin:5px;margin-left:0'src="ast/sub2.png" width=200>
 						<p>I'm <a style="color:skyblue">tr</a><a style="color:pink">an</a>sge<a style="color:pink">nd</a><a style="color:skyblue">er</a> (2 months HRT!).</p>
 						<p>I can talk about <a style="font-family:'metro';font-size:15;" href='https://en.wikipedia.org/wiki/Metro_2033_(novel)' class="hlink">Metro 2033</a> for 2033 hours straight and about Fallout New Vegas for nearly that long.</p>
 						<p>My favourite fictional worlds are <a class="link" href="https://www.reddit.com/r/HFY/comments/55v9e1/chrysalis/" target='_blank'>Chrysalis</a> and 
