--- a/college3.html
+++ b/college3.html
@@ -53,7 +53,7 @@ it's tradition for these pages to be rushed now
 			<div class='scuff'><div>Drums sample:</div><br><div><audio controls style='width:100' src='snd/_yecch.mp3'></div></div><br>
 			<div class='scuff'><div>Pistol sample:</div><br><div><audio controls style='width:100' src='snd/_black.mp3'></div></div><br>
 			
-			<div class='scuff'><div>Preview:</div><div><audio controls style='width:256' src='snd/_yecch2.mp3'></div></div>
+			<div class='scuff'><div>  </div></div>
 			</div>
 		</div>
 		<div class='sect' id='2'>
@@ -67,7 +67,7 @@ it's tradition for these pages to be rushed now
 			the time.</p>
 			<div class='scuff'><div>Sample:</div><br><div><audio controls style='width:100' src='snd/_wav.wav'></div></div><br>
 			
-			<div class='scuff'><div>Preview:</div><div><audio controls style='width:256' src='snd/tone_sine.mp3'></div></div>
+			<div class='scuff'><div>  </div></div>
 			</div>
 		</div>
 		<div class='sect' id='3'>
@@ -82,7 +82,7 @@ it's tradition for these pages to be rushed now
 			<img width=1000 src='ast/col3/ritb.png'>
 			<div class='scuff'><div>Sample:</div><br><div><audio controls style='width:100' src='snd/_rit.mp3'></div></div><br>
 			
-			<div class='scuff'><div>Preview:</div><div><audio controls style='width:256' src='snd/tone_sine.mp3'></div></div>
+			<div class='scuff'><div>  </div></div>
 			</div>
 		</div>
 	</div>
@@ -138,7 +138,7 @@ it's tradition for these pages to be rushed now
 			   the sound more consistent.</p>
 			   <p><img width=600 src='ast/col3/ghost.png'></p>
 			   <p>Sample:<br><audio controls style='width:100' src='snd/_ghost.mp3'>
-			   <div>Preview:</div><div><audio controls style='width:256' src='snd/tone_sine.mp3'></div></p>
+			   <div>  </div></p>
 			</div>
 		</div>
 		<div class='sect' id='9'>
@@ -150,7 +150,7 @@ it's tradition for these pages to be rushed now
 			   
 			<p><img hidden width=600 src='ast/col3/ghost.png'></p>
 			<p>Sample:<br><audio controls style='width:100' src='snd/scrh.wav'>
-			<div>Preview:</div><div><audio controls style='width:256' src='snd/tone_sine.mp3'></div></p>
+			<div>  </div></p>
 			</div>
 		</div>
 		<div class='sect' id='A'>
